Corregí el formulario de contacto

--- a/css/style.css
+++ b/css/style.css
@@ -287,8 +287,7 @@
         grid-template-columns: repeat(1, 1fr);
     -ms-grid-rows: (1fr)[2];
         grid-template-rows: repeat(2, 1fr);
-        grid-template-areas: "nota__arsenico"
- "nota__siria";
+        grid-template-areas: "nota__arsenico" "nota__siria";
   }
   .grid-container .nota__arsenico {
     background-image: url(../imagenes/casares-card-415.png);
@@ -301,8 +300,7 @@
         grid-template-columns: repeat(1, 1fr);
     -ms-grid-rows: (1fr)[2];
         grid-template-rows: repeat(2, 1fr);
-        grid-template-areas: "nota__arsenico"
- "nota__siria";
+        grid-template-areas: "nota__arsenico" "nota__siria";
     -webkit-transform: translateX(14%);
             transform: translateX(14%);
   }
@@ -566,8 +564,7 @@ nav .dropdown-item:hover {
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (1fr)[2];
       grid-template-rows: repeat(2, 1fr);
-      grid-template-areas: "nota__toscano nota__gardel nota__arsenico"
- "nota__boxeo nota__tops nota__siria";
+      grid-template-areas: "nota__toscano nota__gardel nota__arsenico" "nota__boxeo nota__tops nota__siria";
 }
 
 .grid:nth-child(1) {
@@ -1026,12 +1023,7 @@ footer .buscador .barra__busqueda .error .boton__busqueda {
         grid-template-columns: repeat(1, 1fr);
     -ms-grid-rows: (1fr)[6];
         grid-template-rows: repeat(6, 1fr);
-        grid-template-areas: "nota__toscano"
- "nota__gardel"
- "nota__arsenico"
- "nota__boxeo"
- "nota__tops"
- "nota__siria";
+        grid-template-areas: "nota__toscano" "nota__gardel" "nota__arsenico" "nota__boxeo" "nota__tops" "nota__siria";
   }
   .grid .nota__gardel {
     background-image: url(../imagenes/gardel-card-415.png);
@@ -1107,7 +1099,7 @@ footer .buscador .barra__busqueda .error .boton__busqueda {
     margin: 0px;
   }
   #Consulta {
-    max-width: 21.875rem;
+    max-width: 80%;
   }
 }
 
@@ -1141,12 +1133,7 @@ footer .buscador .barra__busqueda .error .boton__busqueda {
         grid-template-columns: repeat(1, 1fr);
     -ms-grid-rows: (1fr)[6];
         grid-template-rows: repeat(6, 1fr);
-        grid-template-areas: "nota__toscano"
- "nota__gardel"
- "nota__arsenico"
- "nota__boxeo"
- "nota__tops"
- "nota__siria";
+        grid-template-areas: "nota__toscano" "nota__gardel" "nota__arsenico" "nota__boxeo" "nota__tops" "nota__siria";
   }
   .grid .card-text h1 {
     font-size: 2.5rem;
@@ -1284,188 +1271,7 @@ footer .buscador .barra__busqueda .error .boton__busqueda {
     border-radius: .25rem;
   }
   #Consulta {
-    max-width: 43.75rem;
-  }
-}
-
-#Consulta {
-  max-width: 21.875rem;
-}
-
-@media screen and (min-width: 480px) and (max-width: 779px) {
-  nav .menu {
-    margin-left: 0%;
-    margin-top: 0%;
-  }
-  nav .nav-link {
-    padding-left: 2% !important;
-  }
-  nav .dropdown-menu {
-    padding: 0%;
-    background-color: rgba(128, 128, 128, 0) !important;
-    margin-top: 0px !important;
-  }
-  nav .dropdown-item {
-    color: black;
-  }
-  .slider__carrusel {
-    width: 100%;
-    height: 50% !important;
-    margin-top: 5%;
-    font-size: 1.25rem;
-  }
-  .slider__carrusel .notas {
-    height: 100%;
-  }
-  .grid {
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
-    -ms-grid-rows: (1fr)[6];
-        grid-template-rows: repeat(6, 1fr);
-        grid-template-areas: "nota__toscano"
- "nota__gardel"
- "nota__arsenico"
- "nota__boxeo"
- "nota__tops"
- "nota__siria";
-  }
-  .grid .card-text h1 {
-    font-size: 2.5rem;
-  }
-  .grid .card-text h2 {
-    font-size: 2.5rem;
-  }
-  .grid .card-text p {
-    font-size: 1.5rem;
-  }
-  .secciones {
-    margin: 5% 0% 0% 0%;
-  }
-  .secciones .nota__toscano {
-    width: 100%;
-    margin: 0px;
-    -webkit-transform: translateX(14%);
-            transform: translateX(14%);
-  }
-  .secciones .nota__toscano .card-text h1 {
-    font-size: 2.5rem;
-  }
-  .secciones .nota__toscano .card-text h2 {
-    font-size: 2.5rem;
-  }
-  .secciones .nota__toscano .card-text p {
-    font-size: 1.5rem;
-  }
-  .secciones .nota__gardel {
-    width: 100%;
-    margin: 0px;
-    -webkit-transform: translateX(14%);
-            transform: translateX(14%);
-  }
-  .secciones .nota__gardel .card-text h1 {
-    font-size: 2.5rem;
-  }
-  .secciones .nota__gardel .card-text h2 {
-    font-size: 2.5rem;
-  }
-  .secciones .nota__gardel .card-text p {
-    font-size: 1.5rem;
-  }
-  .secciones .nota__arsenico {
-    width: 100%;
-    margin: 0px;
-  }
-  .secciones .nota__arsenico .card-text h1 {
-    font-size: 2.5rem;
-  }
-  .secciones .nota__arsenico .card-text h2 {
-    font-size: 2.5rem;
-  }
-  .secciones .nota__arsenico .card-text p {
-    font-size: 1.5rem;
-  }
-  .secciones .nota__boxeo {
-    width: 100%;
-    -webkit-transform: translateX(14%);
-            transform: translateX(14%);
-  }
-  .secciones .nota__boxeo .card-text h1 {
-    font-size: 2.5rem;
-  }
-  .secciones .nota__boxeo .card-text h2 {
-    font-size: 2.5rem;
-  }
-  .secciones .nota__boxeo .card-text p {
-    font-size: 1.5rem;
-  }
-  .secciones .nota__tops {
-    width: 100%;
-    margin: 0px;
-    -webkit-transform: translateX(14%);
-            transform: translateX(14%);
-  }
-  .secciones .nota__tops .card-text h1 {
-    font-size: 2.5rem;
-  }
-  .secciones .nota__tops .card-text h2 {
-    font-size: 2.5rem;
-  }
-  .secciones .nota__tops .card-text p {
-    font-size: 1.5rem;
-  }
-  .secciones .nota__siria {
-    width: 100%;
-    margin: 0px;
-  }
-  .secciones .nota__siria .card-text h1 {
-    font-size: 2.5rem;
-  }
-  .secciones .nota__siria .card-text h2 {
-    font-size: 2.5rem;
-  }
-  .secciones .nota__siria .card-text p {
-    font-size: 1.5rem;
-  }
-  footer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    height: auto;
-    text-align: center;
-    margin-bottom: 0%;
-  }
-  footer .footloose, footer .redes {
-    margin-top: 10%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  footer .redes {
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-  }
-  footer .buscador {
-    margin-top: 10%;
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-  }
-  footer .buscador .error {
-    margin-left: 0.625rem;
-  }
-  footer .buscador .error .boton__busqueda {
-    margin-top: 0% !important;
-    height: 100%;
-    border-color: black;
-    background-color: black;
-    color: white;
-    border-radius: .25rem;
-  }
-  #Consulta {
-    max-width: 43.75rem;
+    max-width: 80%;
   }
 }
 /*# sourceMappingURL=style.css.map */
